# crowlang

./: .clang-format  .clang-tidy  .doxyfile  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  ZEN.md  acris.toml  change.txt  invoke.py  kvk  tasks.py  test.ll  todo.txt
src/: CMakeLists.txt  README.md  banner.hpp  cli.cpp  cli.hpp  cli_arguments.hpp  definitions.hpp  definitions.hpp.in  macros.hpp  main.cpp  overload.hpp  phases.cpp  phases.hpp  types.hpp  version.hpp  version.hpp.in
src/acris/: CMakeLists.txt  README.md  banner.cpp  banner.hpp  definitions.hpp  definitions.hpp.in  main.cpp
src/acris/ast/: CMakeLists.txt  README.md
src/acris/codegen/: CMakeLists.txt  backend_interface.cpp  backend_interface.hpp  interop_backend_interface.cpp  interop_backend_interface.hpp
src/acris/container/: CMakeLists.txt  bimap.hpp  env_state.hpp  source_position.hpp  stream.hpp  text_buffer.cpp  text_buffer.hpp  text_position.hpp  text_stream.hpp
src/acris/debug/: CMakeLists.txt  debug.hpp  log.hpp  log_macros.hpp  loglevel.hpp  trace.hpp  trace_macros.hpp
src/acris/diagnostic/: CMakeLists.txt  diagnostic.hpp  diagnostic_error.hpp  preprocessor_error.cpp  preprocessor_error.hpp  syntax_error.hpp  type_error.hpp
src/acris/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
src/acris/mir/: CMakeLists.txt  README.md  fdecl.hpp  mir.hpp  operand.hpp
src/acris/parser/: CMakeLists.txt  backtrack_guard.hpp  parser.cpp  parser.hpp
src/acris/preprocessor/: CMakeLists.txt  preprocessor.cpp  preprocessor.hpp
src/acris/semantic/: CMakeLists.txt  annotation_queue.cpp  annotation_queue.hpp  semantic_checker.cpp  semantic_checker.hpp  semantic_validator.cpp  semantic_validator.hpp  symbol_env_state.cpp  symbol_env_state.hpp  type_node_evaluator.cpp  type_node_evaluator.hpp  type_promoter.cpp  type_promoter.hpp
src/acris/settings/: CMakeLists.txt  cli.cpp  cli.hpp  enum_convert.hpp  settings.cpp  settings.hpp  toml.cpp  toml.hpp
src/acris/symbol_table/: symbol_table.hpp  symbol_table_factory.hpp
src/acris/token/: CMakeLists.txt  token.cpp  token.hpp  token_stream.hpp  token_type.hpp  tokentype2str.cpp  tokentype2str.hpp
src/acris/unit/: CMakeLists.txt  build_unit.hpp  translation_unit.cpp  translation_unit.hpp
src/ast/: CMakeLists.txt  node.hpp  node_interface.hpp
src/ast/archive/: archive.hpp
src/ast/node/: CMakeLists.txt  archive_macros.hpp  fdecl.hpp  include.hpp  include_nodes.hpp  list.cpp  list.hpp  map.hpp  nil.hpp  node.hpp  node_interface.hpp
src/ast/visitor/: CMakeLists.txt  ast_archive.cpp  ast_archive.hpp  ast_printer.cpp  ast_printer.hpp  ast_serializer.cpp  ast_serializer.hpp  node_visitor.cpp  node_visitor.hpp  print_visitor.cpp  print_visitor.hpp  visitable.hpp
src/backend/: CMakeLists.txt
src/backend/llvm_backend/: CMakeLists.txt  llvm_backend.cpp  llvm_backend.hpp  prologue_generator.cpp  prologue_generator.hpp
src/backend/llvm_ir/: CMakeLists.txt  llvm_ir_backend.cpp  llvm_ir_backend.hpp
src/check/: CMakeLists.txt  check.cpp  check.hpp  env.hpp  env_stack.cpp  env_stack.hpp  native_types.cpp  native_types.hpp  symbol_data.cpp  symbol_data.hpp  symbol_helper.cpp  symbol_helper.hpp  symbol_types.cpp  symbol_types.hpp  type_checker.cpp  type_checker.hpp  type_promoter.cpp  type_promoter.hpp  type_variant.cpp  type_variant.hpp  type_variant_helper.cpp  type_variant_helper.hpp
src/codegen/: CMakeLists.txt
src/codegen/cpp_backend/: CMakeLists.txt  clang_frontend_invoker.cpp  clang_frontend_invoker.hpp  cpp_backend.cpp  cpp_backend.hpp
src/codegen/libclang_backend/: CMakeLists.txt  libclang_backend.hpp
src/codegen/llvm/: codegen.hpp
src/codegen/llvm_backend/: CMakeLists.txt  llvm_backend.cpp  llvm_backend.hpp
src/container/: CMakeLists.txt  bimap.hpp  file_buffer.cpp  file_buffer.hpp  source_position.cpp  source_position.hpp  stream.hpp  text_buffer.cpp  text_buffer.hpp  text_position.cpp  text_position.hpp  text_stream.cpp  text_stream.hpp
src/crow/: CMakeLists.txt  README.md  banner.cpp  banner.hpp  cli.cpp  cli.hpp  definitions.hpp  definitions.hpp.in  main.cpp  phases.cpp  phases.hpp
src/crow/check/: CMakeLists.txt  check.cpp  check.hpp  env_stack.cpp  env_stack.hpp  env_state.cpp  env_state.hpp  semantic_checker.cpp  semantic_checker.hpp  semantic_checker_helper.cpp  semantic_checker_helper.hpp  symbol_data.cpp  symbol_data.hpp  symbol_helper.cpp  symbol_helper.hpp  symbol_types.cpp  symbol_types.hpp  type_checker.cpp  type_checker.hpp  type_promoter.cpp  type_promoter.hpp
src/crow/clir/: CMakeLists.txt  README.md  clir.cpp  clir.hpp  fdecl.hpp  operand.hpp
src/crow/codegen/: CMakeLists.txt  backend_interface.cpp  (+2 more)
src/debug/: CMakeLists.txt  log.cpp  log.hpp  log_macros.hpp  loglevel.cpp  loglevel.hpp  trace.cpp  trace.hpp  trace_macros.hpp
src/exception/: CMakeLists.txt  error.cpp  error.hpp  stacktrace_exception.cpp  stacktrace_exception.hpp  syntax_error.cpp  syntax_error.hpp  type_error.cpp  type_error.hpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
src/lib/: CMakeLists.txt  check_nullptr.hpp  enum2int.hpp  filesystem.cpp  filesystem.hpp  is_any_of.hpp  macros.hpp  overload.hpp  stdexcept.hpp  stdformat.hpp  stdprint.hpp  stdtypes.hpp  string_util.hpp  temporary_directory.hpp  types.hpp
src/libcrow/: CMakeLists.txt  io.hpp
src/parser/: CMakeLists.txt  crow.yy  parser.cpp  parser.hpp
src/stdcrow/: README.md
src/stdlib/: io.hpp
src/stdlibcrow/: CMakeLists.txt  io.hpp  regex.hpp
src/token/: CMakeLists.txt  token.cpp  token.hpp  token_type.hpp  tokentype2str.cpp  tokentype2str.hpp
src/typing/: CMakeLists.txt  entity_type_checker.cpp  entity_type_checker.hpp  native_types.cpp  native_types.hpp  reserved_types.cpp  reserved_types.hpp  top_level_type_checker.cpp  top_level_type_checker.hpp  toplevel_type_checker.cpp  toplevel_type_checker.hpp  type_checker.cpp  type_checker.hpp  type_variant.cpp  type_variant.hpp  type_variant_helper.cpp  type_variant_helper.hpp  typev_utilities.cpp  typev_utilities.hpp
src/visitable/: visitable.hpp
src/visitor/: visitable.hpp
(+973 files in other folders)
